[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = []
license = ""

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-line-length = 88
exclude = '''
(
    migrations
    | .git
    | .pytest_cache
    | .venv
)
'''

[tool.flake8]
max-line-length = 88
ignore = ["E203","W503","W504"]

[tool.isort]
profile = "black"
